Fixed alignment on messages.

--- a/css/components/messages.css
+++ b/css/components/messages.css
@@ -1,10 +1,16 @@
+.messages-wrapper {
+  margin: 0 auto;
+  max-width: 60rem;
+  padding: 0 1rem; }
+
 .messages {
   position: relative;
   margin: 0 0 1rem 0;
   padding: 1rem;
   border: 1px solid rgba(10, 10, 10, 0.25);
   border-radius: 2px;
-  margin: 1rem; }
+  margin: 1rem 0;
+  max-width: 60rem; }
   .messages > :first-child {
     margin-top: 0; }
   .messages > :last-child {
